crates/test-files/fixtures/compile_errors/circular_dependency_create.fe
contract Foo {
    pub fn bar(mut ctx: Context) -> address {
        let foo: Foo = Foo.create(ctx, 0)
        return address(foo)
    }
}
